# svg-tree-preview

./: .gitignore  LICENSE  README.md  TODO.md  default-theme.toml  install.sh  light-theme.toml  pyproject.toml  uninstall.sh
src/svg_tree/: __init__.py  config.py  consts.py  core.py  export.py  html.py  icons.py  main.py  preview.py  render.py
