[project]
name = "svg-tree"
version = "0.1.0"
description = "Generate pretty SVG/PNG directory trees"
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "svgwrite>=1.4.3",
    "pathspec>=0.10.0",
    "cairosvg>=2.7.0",
    "fonttools>=4.50.0",
    "requests>=2.25.0",
    "pyinstaller>=5.0",
    "pygments>=2.19.2",
    "pillow>=10.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
svgtree = "svg_tree.main:main"

[tool.rye]
managed = true
dev-dependencies = [
    "shiv>=1.0.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/svg_tree"]
